; ModuleID = '/home/carl/AnghaBench/libui/common/extr_attrstr.c_uiAttributedStringInsertAtUnattributed.c'
source_filename = "/home/carl/AnghaBench/libui/common/extr_attrstr.c_uiAttributedStringInsertAtUnattributed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64*, i64, i64, i8*, i8*, i8*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiAttributedStringInsertAtUnattributed(%struct.TYPE_6__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca [4 x i8], align 1
  %9 = alloca [2 x i8*], align 16
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @onCodepointBoundary(%struct.TYPE_6__* %21, i64 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %3
  br label %26

26:                                               ; preds = %25, %3
  store i64 0, i64* %18, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i64*, i64** %28, align 8
  %30 = icmp ne i64* %29, null
  br i1 %30, label %31, label %38

31:                                               ; preds = %26
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = load i64*, i64** %33, align 8
  %35 = load i64, i64* %6, align 8
  %36 = getelementptr inbounds i64, i64* %34, i64 %35
  %37 = load i64, i64* %36, align 8
  store i64 %37, i64* %18, align 8
  br label %38

38:                                               ; preds = %31, %26
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %40 = call i32 @invalidateGraphemes(%struct.TYPE_6__* %39)
  %41 = load i8*, i8** %5, align 8
  %42 = call i32 @u8u16len(i8* %41, i64* %10, i64* %11)
  %43 = load i64, i64* %6, align 8
  store i64 %43, i64* %12, align 8
  %44 = load i64, i64* %18, align 8
  store i64 %44, i64* %13, align 8
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 1
  %47 = load i64, i64* %46, align 8
  store i64 %47, i64* %16, align 8
  %48 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %48, i32 0, i32 2
  %50 = load i64, i64* %49, align 8
  store i64 %50, i64* %17, align 8
  %51 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %52 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %53 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %52, i32 0, i32 1
  %54 = load i64, i64* %53, align 8
  %55 = load i64, i64* %10, align 8
  %56 = add i64 %54, %55
  %57 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %58 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %57, i32 0, i32 2
  %59 = load i64, i64* %58, align 8
  %60 = load i64, i64* %11, align 8
  %61 = add i64 %59, %60
  %62 = call i32 @resize(%struct.TYPE_6__* %51, i64 %56, i64 %61)
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 3
  %65 = load i8*, i8** %64, align 8
  %66 = load i64, i64* %6, align 8
  %67 = getelementptr inbounds i8, i8* %65, i64 %66
  %68 = load i64, i64* %10, align 8
  %69 = getelementptr inbounds i8, i8* %67, i64 %68
  %70 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %71 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %70, i32 0, i32 3
  %72 = load i8*, i8** %71, align 8
  %73 = load i64, i64* %6, align 8
  %74 = getelementptr inbounds i8, i8* %72, i64 %73
  %75 = load i64, i64* %16, align 8
  %76 = load i64, i64* %6, align 8
  %77 = sub i64 %75, %76
  %78 = mul i64 %77, 1
  %79 = call i32 @memmove(i8* %69, i8* %74, i64 %78)
  %80 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %81 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %80, i32 0, i32 4
  %82 = load i8*, i8** %81, align 8
  %83 = load i64, i64* %18, align 8
  %84 = getelementptr inbounds i8, i8* %82, i64 %83
  %85 = load i64, i64* %11, align 8
  %86 = getelementptr inbounds i8, i8* %84, i64 %85
  %87 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %88 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %87, i32 0, i32 4
  %89 = load i8*, i8** %88, align 8
  %90 = load i64, i64* %18, align 8
  %91 = getelementptr inbounds i8, i8* %89, i64 %90
  %92 = load i64, i64* %17, align 8
  %93 = load i64, i64* %18, align 8
  %94 = sub i64 %92, %93
  %95 = mul i64 %94, 8
  %96 = call i32 @memmove(i8* %86, i8* %91, i64 %95)
  %97 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %98 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %97, i32 0, i32 0
  %99 = load i64*, i64** %98, align 8
  %100 = load i64, i64* %6, align 8
  %101 = getelementptr inbounds i64, i64* %99, i64 %100
  %102 = load i64, i64* %10, align 8
  %103 = getelementptr inbounds i64, i64* %101, i64 %102
  %104 = bitcast i64* %103 to i8*
  %105 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %106 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %105, i32 0, i32 0
  %107 = load i64*, i64** %106, align 8
  %108 = load i64, i64* %6, align 8
  %109 = getelementptr inbounds i64, i64* %107, i64 %108
  %110 = bitcast i64* %109 to i8*
  %111 = load i64, i64* %16, align 8
  %112 = load i64, i64* %6, align 8
  %113 = sub i64 %111, %112
  %114 = add i64 %113, 1
  %115 = mul i64 %114, 8
  %116 = call i32 @memmove(i8* %104, i8* %110, i64 %115)
  %117 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %118 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %117, i32 0, i32 5
  %119 = load i8*, i8** %118, align 8
  %120 = load i64, i64* %18, align 8
  %121 = getelementptr inbounds i8, i8* %119, i64 %120
  %122 = load i64, i64* %11, align 8
  %123 = getelementptr inbounds i8, i8* %121, i64 %122
  %124 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %125 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %124, i32 0, i32 5
  %126 = load i8*, i8** %125, align 8
  %127 = load i64, i64* %18, align 8
  %128 = getelementptr inbounds i8, i8* %126, i64 %127
  %129 = load i64, i64* %17, align 8
  %130 = load i64, i64* %18, align 8
  %131 = sub i64 %129, %130
  %132 = add i64 %131, 1
  %133 = mul i64 %132, 8
  %134 = call i32 @memmove(i8* %123, i8* %128, i64 %133)
  %135 = load i64, i64* %10, align 8
  store i64 %135, i64* %14, align 8
  %136 = load i64, i64* %11, align 8
  store i64 %136, i64* %15, align 8
  br label %137

137:                                              ; preds = %255, %38
  %138 = load i8*, i8** %5, align 8
  %139 = load i8, i8* %138, align 1
  %140 = icmp ne i8 %139, 0
  br i1 %140, label %141, label %262

141:                                              ; preds = %137
  %142 = load i8*, i8** %5, align 8
  %143 = call i8* @uiprivUTF8DecodeRune(i8* %142, i32 0, i32* %7)
  store i8* %143, i8** %5, align 8
  %144 = load i32, i32* %7, align 4
  %145 = getelementptr inbounds [4 x i8], [4 x i8]* %8, i64 0, i64 0
  %146 = call i64 @uiprivUTF8EncodeRune(i32 %144, i8* %145)
  store i64 %146, i64* %20, align 8
  %147 = load i32, i32* %7, align 4
  %148 = getelementptr inbounds [2 x i8*], [2 x i8*]* %9, i64 0, i64 0
  %149 = call i64 @uiprivUTF16EncodeRune(i32 %147, i8** %148)
  store i64 %149, i64* %11, align 8
  %150 = getelementptr inbounds [4 x i8], [4 x i8]* %8, i64 0, i64 0
  %151 = load i8, i8* %150, align 1
  %152 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %153 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %152, i32 0, i32 3
  %154 = load i8*, i8** %153, align 8
  %155 = load i64, i64* %12, align 8
  %156 = getelementptr inbounds i8, i8* %154, i64 %155
  store i8 %151, i8* %156, align 1
  %157 = load i64, i64* %13, align 8
  %158 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %159 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %158, i32 0, i32 0
  %160 = load i64*, i64** %159, align 8
  %161 = load i64, i64* %12, align 8
  %162 = getelementptr inbounds i64, i64* %160, i64 %161
  store i64 %157, i64* %162, align 8
  %163 = load i64, i64* %20, align 8
  %164 = icmp ugt i64 %163, 1
  br i1 %164, label %165, label %181

165:                                              ; preds = %141
  %166 = getelementptr inbounds [4 x i8], [4 x i8]* %8, i64 0, i64 1
  %167 = load i8, i8* %166, align 1
  %168 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %169 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %168, i32 0, i32 3
  %170 = load i8*, i8** %169, align 8
  %171 = load i64, i64* %12, align 8
  %172 = add i64 %171, 1
  %173 = getelementptr inbounds i8, i8* %170, i64 %172
  store i8 %167, i8* %173, align 1
  %174 = load i64, i64* %13, align 8
  %175 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %176 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %175, i32 0, i32 0
  %177 = load i64*, i64** %176, align 8
  %178 = load i64, i64* %12, align 8
  %179 = add i64 %178, 1
  %180 = getelementptr inbounds i64, i64* %177, i64 %179
  store i64 %174, i64* %180, align 8
  br label %181

181:                                              ; preds = %165, %141
  %182 = load i64, i64* %20, align 8
  %183 = icmp ugt i64 %182, 2
  br i1 %183, label %184, label %200

184:                                              ; preds = %181
  %185 = getelementptr inbounds [4 x i8], [4 x i8]* %8, i64 0, i64 2
  %186 = load i8, i8* %185, align 1
  %187 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %188 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %187, i32 0, i32 3
  %189 = load i8*, i8** %188, align 8
  %190 = load i64, i64* %12, align 8
  %191 = add i64 %190, 2
  %192 = getelementptr inbounds i8, i8* %189, i64 %191
  store i8 %186, i8* %192, align 1
  %193 = load i64, i64* %13, align 8
  %194 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %195 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %194, i32 0, i32 0
  %196 = load i64*, i64** %195, align 8
  %197 = load i64, i64* %12, align 8
  %198 = add i64 %197, 2
  %199 = getelementptr inbounds i64, i64* %196, i64 %198
  store i64 %193, i64* %199, align 8
  br label %200

200:                                              ; preds = %184, %181
  %201 = load i64, i64* %20, align 8
  %202 = icmp ugt i64 %201, 3
  br i1 %202, label %203, label %219

203:                                              ; preds = %200
  %204 = getelementptr inbounds [4 x i8], [4 x i8]* %8, i64 0, i64 3
  %205 = load i8, i8* %204, align 1
  %206 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %207 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %206, i32 0, i32 3
  %208 = load i8*, i8** %207, align 8
  %209 = load i64, i64* %12, align 8
  %210 = add i64 %209, 3
  %211 = getelementptr inbounds i8, i8* %208, i64 %210
  store i8 %205, i8* %211, align 1
  %212 = load i64, i64* %13, align 8
  %213 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %214 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %213, i32 0, i32 0
  %215 = load i64*, i64** %214, align 8
  %216 = load i64, i64* %12, align 8
  %217 = add i64 %216, 3
  %218 = getelementptr inbounds i64, i64* %215, i64 %217
  store i64 %212, i64* %218, align 8
  br label %219

219:                                              ; preds = %203, %200
  %220 = getelementptr inbounds [2 x i8*], [2 x i8*]* %9, i64 0, i64 0
  %221 = load i8*, i8** %220, align 16
  %222 = ptrtoint i8* %221 to i8
  %223 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %224 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %223, i32 0, i32 4
  %225 = load i8*, i8** %224, align 8
  %226 = load i64, i64* %13, align 8
  %227 = getelementptr inbounds i8, i8* %225, i64 %226
  store i8 %222, i8* %227, align 1
  %228 = load i64, i64* %12, align 8
  %229 = trunc i64 %228 to i8
  %230 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %231 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %230, i32 0, i32 5
  %232 = load i8*, i8** %231, align 8
  %233 = load i64, i64* %13, align 8
  %234 = getelementptr inbounds i8, i8* %232, i64 %233
  store i8 %229, i8* %234, align 1
  %235 = load i64, i64* %11, align 8
  %236 = icmp ugt i64 %235, 1
  br i1 %236, label %237, label %255

237:                                              ; preds = %219
  %238 = getelementptr inbounds [2 x i8*], [2 x i8*]* %9, i64 0, i64 1
  %239 = load i8*, i8** %238, align 8
  %240 = ptrtoint i8* %239 to i8
  %241 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %242 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %241, i32 0, i32 4
  %243 = load i8*, i8** %242, align 8
  %244 = load i64, i64* %13, align 8
  %245 = add i64 %244, 1
  %246 = getelementptr inbounds i8, i8* %243, i64 %245
  store i8 %240, i8* %246, align 1
  %247 = load i64, i64* %12, align 8
  %248 = trunc i64 %247 to i8
  %249 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %250 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %249, i32 0, i32 5
  %251 = load i8*, i8** %250, align 8
  %252 = load i64, i64* %13, align 8
  %253 = add i64 %252, 1
  %254 = getelementptr inbounds i8, i8* %251, i64 %253
  store i8 %248, i8* %254, align 1
  br label %255

255:                                              ; preds = %237, %219
  %256 = load i64, i64* %20, align 8
  %257 = load i64, i64* %12, align 8
  %258 = add i64 %257, %256
  store i64 %258, i64* %12, align 8
  %259 = load i64, i64* %11, align 8
  %260 = load i64, i64* %13, align 8
  %261 = add i64 %260, %259
  store i64 %261, i64* %13, align 8
  br label %137

262:                                              ; preds = %137
  store i64 0, i64* %19, align 8
  br label %263

263:                                              ; preds = %286, %262
  %264 = load i64, i64* %19, align 8
  %265 = load i64, i64* %16, align 8
  %266 = load i64, i64* %6, align 8
  %267 = sub i64 %265, %266
  %268 = icmp ule i64 %264, %267
  br i1 %268, label %269, label %289

269:                                              ; preds = %263
  %270 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %271 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %270, i32 0, i32 2
  %272 = load i64, i64* %271, align 8
  %273 = load i64, i64* %17, align 8
  %274 = sub i64 %272, %273
  %275 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %276 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %275, i32 0, i32 0
  %277 = load i64*, i64** %276, align 8
  %278 = load i64, i64* %6, align 8
  %279 = load i64, i64* %14, align 8
  %280 = add i64 %278, %279
  %281 = load i64, i64* %19, align 8
  %282 = add i64 %280, %281
  %283 = getelementptr inbounds i64, i64* %277, i64 %282
  %284 = load i64, i64* %283, align 8
  %285 = add i64 %284, %274
  store i64 %285, i64* %283, align 8
  br label %286

286:                                              ; preds = %269
  %287 = load i64, i64* %19, align 8
  %288 = add i64 %287, 1
  store i64 %288, i64* %19, align 8
  br label %263

289:                                              ; preds = %263
  store i64 0, i64* %19, align 8
  br label %290

290:                                              ; preds = %315, %289
  %291 = load i64, i64* %19, align 8
  %292 = load i64, i64* %17, align 8
  %293 = load i64, i64* %18, align 8
  %294 = sub i64 %292, %293
  %295 = icmp ule i64 %291, %294
  br i1 %295, label %296, label %318

296:                                              ; preds = %290
  %297 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %298 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %297, i32 0, i32 1
  %299 = load i64, i64* %298, align 8
  %300 = load i64, i64* %16, align 8
  %301 = sub i64 %299, %300
  %302 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %303 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %302, i32 0, i32 5
  %304 = load i8*, i8** %303, align 8
  %305 = load i64, i64* %18, align 8
  %306 = load i64, i64* %15, align 8
  %307 = add i64 %305, %306
  %308 = load i64, i64* %19, align 8
  %309 = add i64 %307, %308
  %310 = getelementptr inbounds i8, i8* %304, i64 %309
  %311 = load i8, i8* %310, align 1
  %312 = sext i8 %311 to i64
  %313 = add i64 %312, %301
  %314 = trunc i64 %313 to i8
  store i8 %314, i8* %310, align 1
  br label %315

315:                                              ; preds = %296
  %316 = load i64, i64* %19, align 8
  %317 = add i64 %316, 1
  store i64 %317, i64* %19, align 8
  br label %290

318:                                              ; preds = %290
  %319 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %320 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %319, i32 0, i32 6
  %321 = load i32, i32* %320, align 8
  %322 = load i64, i64* %6, align 8
  %323 = load i64, i64* %10, align 8
  %324 = call i32 @uiprivAttrListInsertCharactersUnattributed(i32 %321, i64 %322, i64 %323)
  ret void
}

declare dso_local i32 @onCodepointBoundary(%struct.TYPE_6__*, i64) #1

declare dso_local i32 @invalidateGraphemes(%struct.TYPE_6__*) #1

declare dso_local i32 @u8u16len(i8*, i64*, i64*) #1

declare dso_local i32 @resize(%struct.TYPE_6__*, i64, i64) #1

declare dso_local i32 @memmove(i8*, i8*, i64) #1

declare dso_local i8* @uiprivUTF8DecodeRune(i8*, i32, i32*) #1

declare dso_local i64 @uiprivUTF8EncodeRune(i32, i8*) #1

declare dso_local i64 @uiprivUTF16EncodeRune(i32, i8**) #1

declare dso_local i32 @uiprivAttrListInsertCharactersUnattributed(i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
